# bench_mgmt

./: Cargo.toml  README.md  presentation.md
src/: main.rs
src/dao/: assignment.rs  employee.rs  mod.rs  project.rs
src/dao/implement/in_memory/: assignment.rs  employee.rs  mod.rs  project.rs
src/domain/: assignment.rs  availability.rs  employee.rs  error.rs  mod.rs  position.rs  project.rs  role.rs
src/playground/: errors.rs  iterators.rs  traits.rs  types.rs  variables.rs
src/service/: assignment.rs  employee.rs  project.rs
src/service/implement/: assignment.rs  mod.rs  project.rs
